# clipd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
crates/clipd/: Cargo.toml
crates/clipd-pick/: Cargo.toml
crates/clipd-pick/src/: daemon_client.rs  emoji.rs  main.rs  search.rs  style.css  style.rs  window.rs
crates/clipd-proto/: Cargo.toml
crates/clipd-proto/src/: lib.rs
crates/clipd/src/: classify.rs  ingest_cmd.rs  ipc.rs  main.rs  store.rs  watcher.rs
data/: clipd.service  io.github.devtochukwu.Clipd.desktop
debian/: changelog  control  copyright  rules
debian/source/: options
extension/clipd@devtochukwu/: extension.js  metadata.json
scripts/: build-ppa.sh  install.sh  regen-series-lockfiles.sh
