[workspace]
resolver = "2"
members = [
    "crates/clipd",
    "crates/clipd-pick",
    "crates/clipd-proto",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
authors = ["SimpleX-T <ntmark2004@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/simplex-t/clipd"

[workspace.dependencies]
clipd-proto = { path = "crates/clipd-proto" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "fs", "time", "signal"] }

rusqlite = { version = "0.31", features = ["bundled", "blob"] }

wl-clipboard-rs = "0.9"

gtk = { package = "gtk4", version = "0.9", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"

dirs = "5"
emojis = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
