[package]
name = "clipd-pick"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "clipd-pick"
path = "src/main.rs"

[dependencies]
clipd-proto = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
gtk = { workspace = true }
adw = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
ureq = { workspace = true }
dirs = { workspace = true }
emojis = { workspace = true }
